# morefuck

./: index.html  package-lock.json  package.json
public/: moresack
src/: App.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
