[package]
name = "moresack"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-websocket = "2"
tokio = { version = "1.44.1", features = ["net"] }
tokio-tungstenite = "0.26.2"
futures = "0.3.31"
util = "0.1.3"
futures-util = "0.3.31"

